schema/testdata/validation_relationships_attr_must_be_identifier/schema.keel
model Author {
    fields {
        written Post[]
    }
}

model Post {
    fields {
        author Author @relation(123)
    }
}
