schema/testdata/errors/relationships_attr_must_be_identifier.keel
model Post {
    fields {
        //expect-error:9:15:E009:field author has an unsupported type Author
        //expect-error:23:32:RelationshipError:The @relation attribute cannot be used on non-model or non-task fields
        author Author @relation(123)
    }
}
